[tool.poetry]
name = "qcop"
version = "0.9.4"
description = "A package for operating Quantum Chemistry programs using qcio standardized data structures. Compatible with TeraChem, psi4, QChem, NWChem, ORCA, Molpro, geomeTRIC and many more."
authors = ["Colton Hicks <github@coltonhicks.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coltonbh/qcop"
homepage = "https://github.com/coltonbh/qcop"

[tool.poetry.dependencies]
python = "^3.9"

# A list of all of the optional dependencies, some of which are included in the below
# `extras`. They can be opted into by apps.
qcelemental = { version = "^0.26.0", optional = true }
qcengine = { version = "^0.27.0", optional = true }
geometric = { version = "^1.0.1", optional = true }
xtb = { version = "^22.1", optional = true }
tcpb = { version = ">=0.14.1", optional = true }
tomli-w = "^1.0.0"
qcio = ">=0.11.8"
qcparse = ">=0.6.4"

[tool.poetry.extras]
qcengine = ["qcelemental", "qcengine"]
geometric = ["geometric"]
xtb = ["xtb"]
all = ["qcelemental", "qcengine", "geometric", "xtb", "tcpb"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.3.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
geometric = "^1.0.1"
qcelemental = "^0.26.0"
qcengine = "^0.27.0"
xtb = "^22.1"
types-toml = "^0.10.8.20240310"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
markdown-include = "^0.8.1"
pymdown-extensions = "^10.9"
mkdocstrings = { extras = ["python"], version = "^0.25.2" }
mkdocs-exclude = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"


[tool.ruff.lint]
isort = { known-first-party = ["qcop", "tests"] }
select = ["I", "F401"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*__init__.py"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
filterwarnings = ["ignore::DeprecationWarning:qcengine.*"]

[tool.typos]
# Exclude specific files or directories
files.extend-exclude = [".vscode/**"]
