[project]
name = "qcop"
version = "0.10.2"
description = "A package for operating Quantum Chemistry programs using qcio standardized data structures. Compatible with TeraChem, psi4, QChem, NWChem, ORCA, Molpro, geomeTRIC and many more."
authors = [{ name = "Colton Hicks", email = "github@coltonhicks.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "qcio>=0.14.0",
    "qccodec>=0.7.6",
    "tomli-w>=1.0.0,<2",
]

[project.optional-dependencies]
qcengine = [
    "qcelemental>=0.26.0,<0.27",
    "qcengine>=0.27.0,<0.28",
]
geometric = ["geometric>=1.0.1,<2"]
xtb = ["xtb~=22.1"]
all = [
    "qcelemental>=0.26.0,<0.27",
    "qcengine>=0.27.0,<0.28",
    "geometric>=1.0.1,<2",
    "xtb~=22.1",
    "tcpb>=0.14.1",
]

[project.urls]
Homepage = "https://github.com/coltonbh/qcop"
Repository = "https://github.com/coltonbh/qcop"
Changelog = "https://github.com/coltonbh/qcop/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/coltonbh/qcop/issues"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.3.0,<2",
    "pytest>=7.3.2,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.11.1,<4",
    "geometric>=1.0.1,<2",
    "qcelemental>=0.26.0,<0.27",
    "qcengine>=0.27.0,<0.28",
    "xtb~=22.1",
    "types-toml>=0.10.8.20240310,<0.11",
]
docs = [
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.5.31,<10",
    "markdown-include>=0.8.1,<0.9",
    "pymdown-extensions~=10.9",
    "mkdocstrings[python]>=0.25.2,<0.26",
    "mkdocs-exclude>=1.0.2,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [".venv"]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
isort = { known-first-party = ["qcop", "tests"] }
select = ["I", "F401"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*site-packages*", "*__init__.py"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
filterwarnings = ["ignore::DeprecationWarning:qcengine.*"]

[tool.typos]
# Exclude specific files or directories
files.extend-exclude = [".vscode/**"]
